--- a/Round4/Manuscript/supplementary.tex
+++ b/Round4/Manuscript/supplementary.tex
@@ -52,8 +52,7 @@ In particular with respect to the dominance of two-group tests.
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.45\columnwidth]{"art/file1"}
-	\caption{[TODO: re-run and save.image to update caption]
-		\textbf{Large sample}: The basic simulation setup scaled ten-fold: $n=400; p=230$.
+	\caption{\textbf{Large sample}: The basic simulation setup scaled ten-fold: $n=400; p=230$.
 	$\SNR$ was set to $0$ (red circle), $100$ (green triangle), $400$ (blue square) for comparable power to other simulations.}
 	\label{fig:large-sample}
 \end{figure}
@@ -382,8 +381,7 @@ It demonstrates that the power disadvantage of accuracy-tests cannot be remedied
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.5\columnwidth]{art/file33}
-	\caption{[TODO: why first statistic missing?]
-		\textbf{Tie breaking}: The basic simulation setup with random tie breaking.}
+	\caption{\textbf{Tie breaking}: The basic simulation setup with random tie breaking.}
 	\label{fig:file33}
 \end{figure}
 
