structuring for referees

--- a/Round4/Manuscript/Biostatistics template/samplebibtex.tex
+++ b/Round4/Manuscript/Biostatistics template/samplebibtex.tex
@@ -83,7 +83,7 @@ provide a review of current statistical analysis methodologies.
 A typical study design consists of 2 stages: first, an association
 analysis is carried out on each SNP, with the observed trait/phenotype
 status. Then the SNPs deemed most highly associated with the trait,
-and often additional surrounding SNPs are analyzed in independent
+and often additional surrounding SNPs are analyzed in indepent
 samples in order to determine whether or not the signals are
 replicated.
 
