--- a/Round4/Manuscript/supplementary.tex
+++ b/Round4/Manuscript/supplementary.tex
@@ -1,5 +1,5 @@
-\documentclass[]{bio}
-%\documentclass[oupdraft]{bio}
+%\documentclass[]{bio}
+\documentclass[oupdraft]{bio}
 %\usepackage[colorlinks=true, urlcolor=citecolor, linkcolor=citecolor, citecolor=citecolor]{hyperref}
 
 % Add history information for the article if required
@@ -7,7 +7,8 @@
 
 \input{preamble.tex}
 
-\usepackage{float}
+\usepackage[markers,nolists]{endfloat}
+
 
 \begin{document}
 
