structuring for referees

--- a/Round4/Manuscript/permutaing_accuracy.tex
+++ b/Round4/Manuscript/permutaing_accuracy.tex
@@ -1,15 +1,11 @@
-%\documentclass[]{bio}
-\documentclass[oupdraft]{bio}
+\documentclass[]{bio}
+%\documentclass[oupdraft]{bio}
 %\usepackage[colorlinks=true, urlcolor=citecolor, linkcolor=citecolor, citecolor=citecolor]{hyperref}
 
 % Add history information for the article if required
 \history{xxx}
 
 \input{preamble.tex}
-
-\usepackage[markers,nolists]{endfloat}
-
-
 
 \begin{document}
 
@@ -913,8 +909,6 @@ We thank the following:
 \newpage
 \bibliographystyle{abbrvnat}
 \bibliography{Permuting_Accuracy.bib}
-
-
 
 \end{document}
 
