--- a/Round4/Manuscript/supplementary.tex
+++ b/Round4/Manuscript/supplementary.tex
@@ -1,14 +1,11 @@
-%\documentclass[]{bio}
-\documentclass[oupdraft]{bio}
+\documentclass[]{bio}
+%\documentclass[oupdraft]{bio}
 %\usepackage[colorlinks=true, urlcolor=citecolor, linkcolor=citecolor, citecolor=citecolor]{hyperref}
 
 % Add history information for the article if required
 \history{xxx}
 
 \input{preamble.tex}
-
-\usepackage[markers,nolists]{endfloat}
-
 
 \begin{document}
 
