--- a/Round4/Manuscript/permutaing_accuracy.tex
+++ b/Round4/Manuscript/permutaing_accuracy.tex
@@ -341,7 +341,7 @@ We now compare the power of our various statistics in various configurations.
 We do so via simulation.
 The basic simulation setup is presented in Section~\ref{sec:simulation_details}.
 Following sections present variations on the basic setup.
-The \R code for the simulations can be found in \url{http://www.john-ros.com/permuting_accuracy/}.
+The \R code for the simulations can be found in \url{https://github.com/johnros/better_than_chance_code}.
 
 
 \subsection{Basic Simulation Setup-- Fisher's LDA}
