--- a/Round4/Manuscript/Submission/permutaing_accuracy.tex
+++ b/Round4/Manuscript/Submission/permutaing_accuracy.tex
@@ -1,5 +1,5 @@
-%\documentclass[]{bio}
-\documentclass[oupdraft]{bio}
+\documentclass[]{bio}
+%\documentclass[oupdraft]{bio}
 %\usepackage[colorlinks=true, urlcolor=citecolor, linkcolor=citecolor, citecolor=citecolor]{hyperref}
 
 % Add history information for the article if required
@@ -7,7 +7,7 @@
 
 \input{preamble.tex}
 
-\usepackage[nomarkers,nolists]{endfloat}
+%\usepackage[nomarkers,nolists]{endfloat}
 
 
 \begin{document}
@@ -294,44 +294,44 @@ Table~\ref{tab:collected} collects an initial battery of tests we will be compar
 We selected the accuracy tests based on their popularity in the literature.
 We selected two-group tests based on their popularity, and so that various types of test statistics are represented: tests for dense and sparse shifts, and GOF tests. 
 
-%\begin{tcolorbox}
-%	\centering
-%	\footnotesize
-%	\begin{tabular}{l|c|c|c}
-%		Name & Algorithm & Resampling & Remark\\ 
-%		\hline
-%		\hline
-%		\cue svm.noCV.c001 	& SVM & Resubstitution  & cost=$0.01$ \\ 
-%		\cue svm.noCV.c100 	& SVM & Resubstitution  & cost=$100$ \\ 
-%		\cue svm.CV.cCV 	& SVM & V-fold  & cost=CV \\ 
-%		\cue svm.CV.c001	& SVM & V-fold 		    & cost=$0.01$ \\ 
-%		\cue svm.CV.c100	& SVM & V-fold 		    & cost=$100$ \\ 
-%		\cue lda.noCV.1 	& LDA & Resubstitution 	&  --\\ 
-%		\cue lda.CV.1 	& LDA & V-fold 			&  -- \\ 
-%		Cai & \cite{cai_two-sample_2013} & Resubstitution & -- \\ 
-%		Simes & \cite{simes1986improved} & Resubstitution & -- \\ 
-%		dCOV & \cite{szekely2004testing} & Resubstitution & -- \\ 
-%		Gretton & \cite{gretton_kernel_2012-1} & Resubstitution & -- \\ 
-%		Srivastava & \cite{srivastava_test_2008} & Resubstitution & -- \\ 
-%		Goeman & \cite{goeman2006testing} & Resubstitution & -- \\ 
-%		Schafer & \cite{schafer_shrinkage_2005} & Resubstitution & -- \\ 
-%		Hotelling & \cite{hotelling_generalization_1931} & Resubstitution & -- \\
-%		Oracle & $T^2$ with Known $\Sigma$ & Resubstitution & -- \\ 
-%	\end{tabular} 
-%	\captionsetup{type=table}
-%	\caption{\footnotesize
-%		This table collects the various test statistics we will be studying. 
-%		Two-group tests for dense shifts include: \textit{Oracle}, \textit{Hotelling}, \textit{Schafer}, \textit{Goeman}, and \textit{Srivastava}.
-%		Two-group tests for sparse shifts include \textit{Cai}.
-%		Two-group adaptive tests for shifts include \textit{Simes}.
-%		The rest are accuracy-tests, marked with a \cue, and details given in the table. 	
-%		For example, \textit{svm.CV.c100} is a linear SVM, with V-fold cross-validated accuracy, and cost parameter set at $100$ \citep{meyer_e1071:_2015}.
-%		\textit{svm.CV.cCV} is a linear SVM, with V-fold CV accuracy, and cost parameter optimized with (an inner) CV. 
-%		\textit{lda.noCV.1} is Fisher's LDA, with a resubstituted accuracy estimate.
-%		Also recall that in LIBSVM, the \emph{cost} is inversely proportional to the regularization \citep{chang2011libsvm}: larger cost implies less regularization. 
-%	}
-%	\label{tab:collected}
-%\end{tcolorbox}
+\begin{tcolorbox}
+	\centering
+	\footnotesize
+	\begin{tabular}{l|c|c|c}
+		Name & Algorithm & Resampling & Remark\\ 
+		\hline
+		\hline
+		\cue svm.noCV.c001 	& SVM & Resubstitution  & cost=$0.01$ \\ 
+		\cue svm.noCV.c100 	& SVM & Resubstitution  & cost=$100$ \\ 
+		\cue svm.CV.cCV 	& SVM & V-fold  & cost=CV \\ 
+		\cue svm.CV.c001	& SVM & V-fold 		    & cost=$0.01$ \\ 
+		\cue svm.CV.c100	& SVM & V-fold 		    & cost=$100$ \\ 
+		\cue lda.noCV.1 	& LDA & Resubstitution 	&  --\\ 
+		\cue lda.CV.1 	& LDA & V-fold 			&  -- \\ 
+		Cai & \cite{cai_two-sample_2013} & Resubstitution & -- \\ 
+		Simes & \cite{simes1986improved} & Resubstitution & -- \\ 
+		dCOV & \cite{szekely2004testing} & Resubstitution & -- \\ 
+		Gretton & \cite{gretton_kernel_2012-1} & Resubstitution & -- \\ 
+		Srivastava & \cite{srivastava_test_2008} & Resubstitution & -- \\ 
+		Goeman & \cite{goeman2006testing} & Resubstitution & -- \\ 
+		Schafer & \cite{schafer_shrinkage_2005} & Resubstitution & -- \\ 
+		Hotelling & \cite{hotelling_generalization_1931} & Resubstitution & -- \\
+		Oracle & $T^2$ with Known $\Sigma$ & Resubstitution & -- \\ 
+	\end{tabular} 
+	\captionsetup{type=table}
+	\caption{\footnotesize
+		This table collects the various test statistics we will be studying. 
+		Two-group tests for dense shifts include: \textit{Oracle}, \textit{Hotelling}, \textit{Schafer}, \textit{Goeman}, and \textit{Srivastava}.
+		Two-group tests for sparse shifts include \textit{Cai}.
+		Two-group adaptive tests for shifts include \textit{Simes}.
+		The rest are accuracy-tests, marked with a \cue, and details given in the table. 	
+		For example, \textit{svm.CV.c100} is a linear SVM, with V-fold cross-validated accuracy, and cost parameter set at $100$ \citep{meyer_e1071:_2015}.
+		\textit{svm.CV.cCV} is a linear SVM, with V-fold CV accuracy, and cost parameter optimized with (an inner) CV. 
+		\textit{lda.noCV.1} is Fisher's LDA, with a resubstituted accuracy estimate.
+		Also recall that in LIBSVM, the \emph{cost} is inversely proportional to the regularization \citep{chang2011libsvm}: larger cost implies less regularization. 
+	}
+	\label{tab:collected}
+\end{tcolorbox}
 
 
 
@@ -344,7 +344,7 @@ We now compare the power of our various statistics in various configurations.
 We do so via simulation.
 The basic simulation setup is presented in Section~\ref{sec:simulation_details}.
 Following sections present variations on the basic setup.
-The \R code for the simulations can be found in \url{http://www.john-ros.com/permuting_accuracy/}.
+The \R code for the simulations can be found in \url{https://github.com/johnros/better_than_chance_code}.
 
 
 \subsection{Basic Simulation Setup-- Fisher's LDA}
@@ -563,27 +563,27 @@ It can also be seen that power increases with the number of bootstrap replicatio
 
 \bigskip
 
-%\begin{tcolorbox}
-%	\centering
-%	\footnotesize
-%	\begin{tabular}{l|c|c|c|c}
-%		Name & Algorithm & Resampling & B  & Remark\\ 
-%		\hline
-%		\hline
-%		\cue lda.Boot.b10 & LDA & bLOO 	& $10$ &  -- \\ 
-%		\cue svm.Boot.c001.b50 & SVM & bLOO 	& $10$ & cost=0.01 \\ 
-%		\cue svm.Boot.c100.b50 & SVM & bLOO 	& $10$ & cost=100 \\ 
-%		\cue svm.Boot.c001.b10 & SVM & bLOO 	& $50$ & cost=0.01 \\ 
-%		\cue svm.Boot.c100.b10 & SVM & bLOO 	& $50$ & cost=100 \\ 
-%	\end{tabular} 
-%	\captionsetup{type=table}
-%	\caption{\footnotesize
-%		The same as Table~\ref{tab:collected} for bootstrapped accuracy estimates. 
-%		bLOO is defined in~\ref{def:bloo}.
-%		$B$ denotes the number of Bootstrap samples.
-%		Accuracy-tests marked with a \cue.} 
-%	\label{tab:collected_2}
-%\end{tcolorbox}
+\begin{tcolorbox}
+	\centering
+	\footnotesize
+	\begin{tabular}{l|c|c|c|c}
+		Name & Algorithm & Resampling & B  & Remark\\ 
+		\hline
+		\hline
+		\cue lda.Boot.b10 & LDA & bLOO 	& $10$ &  -- \\ 
+		\cue svm.Boot.c001.b50 & SVM & bLOO 	& $10$ & cost=0.01 \\ 
+		\cue svm.Boot.c100.b50 & SVM & bLOO 	& $10$ & cost=100 \\ 
+		\cue svm.Boot.c001.b10 & SVM & bLOO 	& $50$ & cost=0.01 \\ 
+		\cue svm.Boot.c100.b10 & SVM & bLOO 	& $50$ & cost=100 \\ 
+	\end{tabular} 
+	\captionsetup{type=table}
+	\caption{\footnotesize
+		The same as Table~\ref{tab:collected} for bootstrapped accuracy estimates. 
+		bLOO is defined in~\ref{def:bloo}.
+		$B$ denotes the number of Bootstrap samples.
+		Accuracy-tests marked with a \cue.} 
+	\label{tab:collected_2}
+\end{tcolorbox}
 
 
 \begin{figure}[ht]
@@ -635,25 +635,25 @@ The better power of \emph{svm.CV.c001} leads us to argue that the optimal regula
 
 \bigskip
 
-%\begin{tcolorbox}
-%	\centering
-%	\footnotesize
-%	\begin{tabular}{l|c|c|c}
-%		Name & Algorithm & Resampling &  Parameters\\ 
-%		\hline
-%		\hline
-%		\cue lda.highdim.Dudoit.CV & \cite{dudoit_comparison_2002} & V-fold & -- \\ 
-%		\cue lda.highdim.Ramey.CV & \cite{ramey_high-dimensional_2016} & V-fold & -- \\ 
-%		\cue lda.highdim.Pang.CV & \cite{pang_shrinkage-based_2009} & V-fold & -- \\ 
-%		\cue lda.highdim.Pang.b50 & \cite{pang_shrinkage-based_2009} & bLOO 	 & B=50 \\ 
-%	\end{tabular} 
-%	\captionsetup{type=table}
-%	\caption{\footnotesize
-%		The same as Table~\ref{tab:collected} for regularized (high-dimensional) predictors. 
-%		Accuracy tests marked with a \cue.
-%	} 
-%	\label{tab:collected_3}
-%\end{tcolorbox}
+\begin{tcolorbox}
+	\centering
+	\footnotesize
+	\begin{tabular}{l|c|c|c}
+		Name & Algorithm & Resampling &  Parameters\\ 
+		\hline
+		\hline
+		\cue lda.highdim.Dudoit.CV & \cite{dudoit_comparison_2002} & V-fold & -- \\ 
+		\cue lda.highdim.Ramey.CV & \cite{ramey_high-dimensional_2016} & V-fold & -- \\ 
+		\cue lda.highdim.Pang.CV & \cite{pang_shrinkage-based_2009} & V-fold & -- \\ 
+		\cue lda.highdim.Pang.b50 & \cite{pang_shrinkage-based_2009} & bLOO 	 & B=50 \\ 
+	\end{tabular} 
+	\captionsetup{type=table}
+	\caption{\footnotesize
+		The same as Table~\ref{tab:collected} for regularized (high-dimensional) predictors. 
+		Accuracy tests marked with a \cue.
+	} 
+	\label{tab:collected_3}
+\end{tcolorbox}
 
 
 \begin{figure}[ht]
@@ -915,90 +915,89 @@ We thank the following:
 
 
 
-\newpage
-
-
-\begin{tcolorbox}
-	\centering
-	\footnotesize
-	\begin{tabular}{l|c|c|c}
-		Name & Algorithm & Resampling & Remark\\ 
-		\hline
-		\hline
-		\cue svm.noCV.c001 	& SVM & Resubstitution  & cost=$0.01$ \\ 
-		\cue svm.noCV.c100 	& SVM & Resubstitution  & cost=$100$ \\ 
-		\cue svm.CV.cCV 	& SVM & V-fold  & cost=CV \\ 
-		\cue svm.CV.c001	& SVM & V-fold 		    & cost=$0.01$ \\ 
-		\cue svm.CV.c100	& SVM & V-fold 		    & cost=$100$ \\ 
-		\cue lda.noCV.1 	& LDA & Resubstitution 	&  --\\ 
-		\cue lda.CV.1 	& LDA & V-fold 			&  -- \\ 
-		Cai & \cite{cai_two-sample_2013} & Resubstitution & -- \\ 
-		Simes & \cite{simes1986improved} & Resubstitution & -- \\ 
-		dCOV & \cite{szekely2004testing} & Resubstitution & -- \\ 
-		Gretton & \cite{gretton_kernel_2012-1} & Resubstitution & -- \\ 
-		Srivastava & \cite{srivastava_test_2008} & Resubstitution & -- \\ 
-		Goeman & \cite{goeman2006testing} & Resubstitution & -- \\ 
-		Schafer & \cite{schafer_shrinkage_2005} & Resubstitution & -- \\ 
-		Hotelling & \cite{hotelling_generalization_1931} & Resubstitution & -- \\
-		Oracle & $T^2$ with Known $\Sigma$ & Resubstitution & -- \\ 
-	\end{tabular} 
-	\captionsetup{type=table}
-	\caption{\footnotesize
-		This table collects the various test statistics we will be studying. 
-		Two-group tests for dense shifts include: \textit{Oracle}, \textit{Hotelling}, \textit{Schafer}, \textit{Goeman}, and \textit{Srivastava}.
-		Two-group tests for sparse shifts include \textit{Cai}.
-		Two-group adaptive tests for shifts include \textit{Simes}.
-		The rest are accuracy-tests, marked with a \cue, and details given in the table. 	
-		For example, \textit{svm.CV.c100} is a linear SVM, with V-fold cross-validated accuracy, and cost parameter set at $100$ \citep{meyer_e1071:_2015}.
-		\textit{svm.CV.cCV} is a linear SVM, with V-fold CV accuracy, and cost parameter optimized with (an inner) CV. 
-		\textit{lda.noCV.1} is Fisher's LDA, with a resubstituted accuracy estimate.
-		Also recall that in LIBSVM, the \emph{cost} is inversely proportional to the regularization \citep{chang2011libsvm}: larger cost implies less regularization. 
-	}
-	\label{tab:collected}
-\end{tcolorbox}
-
-\begin{tcolorbox}
-	\centering
-	\footnotesize
-	\begin{tabular}{l|c|c|c|c}
-		Name & Algorithm & Resampling & B  & Remark\\ 
-		\hline
-		\hline
-		\cue lda.Boot.b10 & LDA & bLOO 	& $10$ &  -- \\ 
-		\cue svm.Boot.c001.b50 & SVM & bLOO 	& $10$ & cost=0.01 \\ 
-		\cue svm.Boot.c100.b50 & SVM & bLOO 	& $10$ & cost=100 \\ 
-		\cue svm.Boot.c001.b10 & SVM & bLOO 	& $50$ & cost=0.01 \\ 
-		\cue svm.Boot.c100.b10 & SVM & bLOO 	& $50$ & cost=100 \\ 
-	\end{tabular} 
-	\captionsetup{type=table}
-	\caption{\footnotesize
-		The same as Table~\ref{tab:collected} for bootstrapped accuracy estimates. 
-		bLOO is defined in~\ref{def:bloo}.
-		$B$ denotes the number of Bootstrap samples.
-		Accuracy-tests marked with a \cue.} 
-	\label{tab:collected_2}
-\end{tcolorbox}
-
-
-\begin{tcolorbox}
-	\centering
-	\footnotesize
-	\begin{tabular}{l|c|c|c}
-		Name & Algorithm & Resampling &  Parameters\\ 
-		\hline
-		\hline
-		\cue lda.highdim.Dudoit.CV & \cite{dudoit_comparison_2002} & V-fold & -- \\ 
-		\cue lda.highdim.Ramey.CV & \cite{ramey_high-dimensional_2016} & V-fold & -- \\ 
-		\cue lda.highdim.Pang.CV & \cite{pang_shrinkage-based_2009} & V-fold & -- \\ 
-		\cue lda.highdim.Pang.b50 & \cite{pang_shrinkage-based_2009} & bLOO 	 & B=50 \\ 
-	\end{tabular} 
-	\captionsetup{type=table}
-	\caption{\footnotesize
-		The same as Table~\ref{tab:collected} for regularized (high-dimensional) predictors. 
-		Accuracy tests marked with a \cue.
-	} 
-	\label{tab:collected_3}
-\end{tcolorbox}
+%\newpage
+%
+%\begin{tcolorbox}
+%	\centering
+%	\footnotesize
+%	\begin{tabular}{l|c|c|c}
+%		Name & Algorithm & Resampling & Remark\\ 
+%		\hline
+%		\hline
+%		\cue svm.noCV.c001 	& SVM & Resubstitution  & cost=$0.01$ \\ 
+%		\cue svm.noCV.c100 	& SVM & Resubstitution  & cost=$100$ \\ 
+%		\cue svm.CV.cCV 	& SVM & V-fold  & cost=CV \\ 
+%		\cue svm.CV.c001	& SVM & V-fold 		    & cost=$0.01$ \\ 
+%		\cue svm.CV.c100	& SVM & V-fold 		    & cost=$100$ \\ 
+%		\cue lda.noCV.1 	& LDA & Resubstitution 	&  --\\ 
+%		\cue lda.CV.1 	& LDA & V-fold 			&  -- \\ 
+%		Cai & \cite{cai_two-sample_2013} & Resubstitution & -- \\ 
+%		Simes & \cite{simes1986improved} & Resubstitution & -- \\ 
+%		dCOV & \cite{szekely2004testing} & Resubstitution & -- \\ 
+%		Gretton & \cite{gretton_kernel_2012-1} & Resubstitution & -- \\ 
+%		Srivastava & \cite{srivastava_test_2008} & Resubstitution & -- \\ 
+%		Goeman & \cite{goeman2006testing} & Resubstitution & -- \\ 
+%		Schafer & \cite{schafer_shrinkage_2005} & Resubstitution & -- \\ 
+%		Hotelling & \cite{hotelling_generalization_1931} & Resubstitution & -- \\
+%		Oracle & $T^2$ with Known $\Sigma$ & Resubstitution & -- \\ 
+%	\end{tabular} 
+%	\captionsetup{type=table}
+%	\caption{\footnotesize
+%		This table collects the various test statistics we will be studying. 
+%		Two-group tests for dense shifts include: \textit{Oracle}, \textit{Hotelling}, \textit{Schafer}, \textit{Goeman}, and \textit{Srivastava}.
+%		Two-group tests for sparse shifts include \textit{Cai}.
+%		Two-group adaptive tests for shifts include \textit{Simes}.
+%		The rest are accuracy-tests, marked with a \cue, and details given in the table. 	
+%		For example, \textit{svm.CV.c100} is a linear SVM, with V-fold cross-validated accuracy, and cost parameter set at $100$ \citep{meyer_e1071:_2015}.
+%		\textit{svm.CV.cCV} is a linear SVM, with V-fold CV accuracy, and cost parameter optimized with (an inner) CV. 
+%		\textit{lda.noCV.1} is Fisher's LDA, with a resubstituted accuracy estimate.
+%		Also recall that in LIBSVM, the \emph{cost} is inversely proportional to the regularization \citep{chang2011libsvm}: larger cost implies less regularization. 
+%	}
+%	\label{tab:collected}
+%\end{tcolorbox}
+%
+%\begin{tcolorbox}
+%	\centering
+%	\footnotesize
+%	\begin{tabular}{l|c|c|c|c}
+%		Name & Algorithm & Resampling & B  & Remark\\ 
+%		\hline
+%		\hline
+%		\cue lda.Boot.b10 & LDA & bLOO 	& $10$ &  -- \\ 
+%		\cue svm.Boot.c001.b50 & SVM & bLOO 	& $10$ & cost=0.01 \\ 
+%		\cue svm.Boot.c100.b50 & SVM & bLOO 	& $10$ & cost=100 \\ 
+%		\cue svm.Boot.c001.b10 & SVM & bLOO 	& $50$ & cost=0.01 \\ 
+%		\cue svm.Boot.c100.b10 & SVM & bLOO 	& $50$ & cost=100 \\ 
+%	\end{tabular} 
+%	\captionsetup{type=table}
+%	\caption{\footnotesize
+%		The same as Table~\ref{tab:collected} for bootstrapped accuracy estimates. 
+%		bLOO is defined in~\ref{def:bloo}.
+%		$B$ denotes the number of Bootstrap samples.
+%		Accuracy-tests marked with a \cue.} 
+%	\label{tab:collected_2}
+%\end{tcolorbox}
+%
+%
+%\begin{tcolorbox}
+%	\centering
+%	\footnotesize
+%	\begin{tabular}{l|c|c|c}
+%		Name & Algorithm & Resampling &  Parameters\\ 
+%		\hline
+%		\hline
+%		\cue lda.highdim.Dudoit.CV & \cite{dudoit_comparison_2002} & V-fold & -- \\ 
+%		\cue lda.highdim.Ramey.CV & \cite{ramey_high-dimensional_2016} & V-fold & -- \\ 
+%		\cue lda.highdim.Pang.CV & \cite{pang_shrinkage-based_2009} & V-fold & -- \\ 
+%		\cue lda.highdim.Pang.b50 & \cite{pang_shrinkage-based_2009} & bLOO 	 & B=50 \\ 
+%	\end{tabular} 
+%	\captionsetup{type=table}
+%	\caption{\footnotesize
+%		The same as Table~\ref{tab:collected} for regularized (high-dimensional) predictors. 
+%		Accuracy tests marked with a \cue.
+%	} 
+%	\label{tab:collected_3}
+%\end{tcolorbox}
 
 
 
