--- a/Round4/Manuscript/permutaing_accuracy.tex
+++ b/Round4/Manuscript/permutaing_accuracy.tex
@@ -1,5 +1,5 @@
-\documentclass[]{bio}
-%\documentclass[oupdraft]{bio}
+%\documentclass[]{bio}
+\documentclass[oupdraft]{bio}
 %\usepackage[colorlinks=true, urlcolor=citecolor, linkcolor=citecolor, citecolor=citecolor]{hyperref}
 
 % Add history information for the article if required
