--- a/Round5/permutaing_accuracy.tex
+++ b/Round5/permutaing_accuracy.tex
@@ -185,15 +185,13 @@ In high-dimension, when $n$ is not much larger than $p$, the $T^2$ test is very 
 Many high-dimensional versions of the $T^2$ test exist, which consist of regularizing the estimator of $\Sigma$.
 Examples of high-dim tests for (dense) shifts include 
 \cite{dempster1958high,bai1996effect,schafer_shrinkage_2005,goeman2006testing,srivastava_test_2008}, and many more.
-
 If $\mathbb{E}(x_1)$ differs from $\mathbb{E}(x_0)$ in few coordinates we say the \emph{signal is sparse}.
 Examples of high-dim test statistics for sparse shifts include \cite{cai_two-sample_2013} and \cite{chang2014simulation}.
-
 It is possible that the practitioner is unaware of the amount of sparsity in the signal. 
-Some high-dim test statistics that \emph{adapt} to the level of (unknown) sparsity include \cite{simes1986improved,donoho2004higher,zhong2013tests,shen2015adaptive,moscovich2016exact}.
+Some high-dim test statistics that \emph{adapt} to the level of (unknown) sparsity include \cite{simes1986improved,donoho2004higher}, and many more.
 
 If the signal is present not (only) in means we opt for a two-group GOF test, instead of a location test. 
-Examples of multivariate GOF tests include \cite{bickel1969distribution,friedman1979multivariate,hall2002permutation,szekely2004testing,Biau2005,Rosenbaum2005,eric2008testing,perez2009estimation,vayatis_auc_2009,gretton_kernel_2012-1}.
+Examples of multivariate GOF tests include \cite{bickel1969distribution,friedman1979multivariate,hall2002permutation,szekely2004testing,Biau2005,gretton_kernel_2012-1}, and many more.
 
 As previously mentioned, a classifier's accuracy may also be used as a test statistic. 
 We now explain how an accuracy-test is constructed. 
